--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 
 This is my cool website!!
 
-<h2 style="color:red">Kenso is a genius!!</h2>
-
+<h2 style="color:red">nadiyas a 
+    <span style= "color:blueviolet">C</span>
+    <span style= "color:aqua">O</span> 
+    <span style= "color:blueviolet">O</span>
+    <span style= "color:aqua">L</span>!!</h2>
+<p><a href="/about">aboutme</a></p>
 <p><a href="http://www.google.com">this is a link to Google</a></p>
 
 <p><a href="/favorites">My favorites</a></p>
